# camunda-robot-bridge

./: .gitignore  Camunda.html  Makefile  default.nix  docker-compose-robocloud.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  shell.nix  tsconfig.json
bridge/: Makefile  index.js
bridge/src/: client.ts
camunda/app/src/main/resources/: xkcd-fetch-review.bpmn  xkcd-search.bpmn
camunda/deployment/: camunda-reset.bpmn
camunda_robotframework_bridge/: default.nix  package-lock.json  package.json  shell.nix
carrot_executor/: default.nix  index.js  package-lock.json  package.json  rollup.config.js  tsconfig.json
carrot_executor/src/: ProcessAPI.ts  client.ts  index.ts  local.ts  robocloud.ts
lib/: Camunda.py  CamundaListener.py
nix/: default.nix  node-dev-packages.nix  node-run-packages.nix  sources.json
robocloud/: Dockerfile
robocloud/reset-bot/: conda.yaml  robot.yaml
robocloud/xkcd-bot/: conda.yaml  robot.yaml  xkcd.robot
robot/: Makefile  default.nix  pyproject.toml  reset.robot  setup.nix  shell.nix  xkcd.robot
src/: client.ts  index.ts
