[tool.poetry]
name = "camunda-robot-bridge"
version = "0.1.0"
description = "Camunda Robot Framework Bridge"
authors = ["Asko Soukka <asko.soukka@iki.fi>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
robotframework = "^4.0.3"
robotframework-seleniumlibrary = "^5.1.3"
robotframework-seleniumtestability = "^1.1.0"
pydantic = "^1.8.2"
requests = "^2.25.1"
Pillow = "^8.3.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
